@@ -3,7 +3,7 @@
 
   <groupId>uk.gov.defra.tracesx</groupId>
   <artifactId>spring-boot-parent</artifactId>
-  <version>3.0.30-SNAPSHOT</version>
+  <version>4.0.23-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>TracesX-Spring-Boot-Parent</name>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.12</version>
+    <version>3.2.1</version>
   </parent>
 
   <distributionManagement>
@@ -38,21 +38,20 @@
 
     <java.version>17</java.version>
 
-    <tracesx.common.version>3.0.0</tracesx.common.version>
-    <tracesx.common.security.version>3.0.0</tracesx.common.security.version>
-    <tracesx.notification.schema.version>2.0.20</tracesx.notification.schema.version>
-    <applicationinsights.version>2.6.3</applicationinsights.version>
-    <azure.applicationinsights.springboot.starter.version>2.6.3</azure.applicationinsights.springboot.starter.version>
+    <tracesx.common.version>4.0.2</tracesx.common.version>
+    <tracesx.common.security.version>4.0.4</tracesx.common.security.version>
+    <tracesx.notification.schema.version>4.0.17</tracesx.notification.schema.version>
+    <applicationinsights.version>3.4.13</applicationinsights.version>
     <azure.springboot.metricsstarter.version>2.3.5</azure.springboot.metricsstarter.version>
-    <azure.version>2.2.0</azure.version>
+    <azure.version>2.3.3</azure.version>
     <azureidentity.version>1.11.2</azureidentity.version>
     <checkstyle.version>10.12.2</checkstyle.version>
     <client.runtime.version>1.7.14</client.runtime.version>
-    <com.mashape.unirest.version>1.4.9</com.mashape.unirest.version>
     <commons.beanutils.version>1.9.4</commons.beanutils.version>
     <equalsverifier.version>3.15.1</equalsverifier.version>
     <git-build-hook-maven-plugin.version>3.4.1</git-build-hook-maven-plugin.version>
     <guava.version>32.1.2-jre</guava.version>
+    <hibernate.version>6.4.1.Final</hibernate.version>
     <io.micrometer.micrometer-core.version>1.11.3</io.micrometer.micrometer-core.version>
     <jacoco.maven.plugin.version>0.8.10</jacoco.maven.plugin.version>
     <jjwt.version>0.11.5</jjwt.version>
@@ -72,10 +71,8 @@
     <org.everit.json.schema.version>1.12.1</org.everit.json.schema.version>
     <org.owasp.encoder.version>1.2.3</org.owasp.encoder.version>
     <owasp.version>8.4.0</owasp.version>
-    <shared-resources.version>1.0.0</shared-resources.version>
+    <shared-resources.version>1.0.1</shared-resources.version>
     <snakeyaml.version>2.1</snakeyaml.version>
-    <surefire.junit4.version>2.22.0</surefire.junit4.version>
-    <testng.version>6.14.3</testng.version>
     <woodstox-core.version>6.5.1</woodstox-core.version>
   </properties>
 
@@ -135,27 +132,7 @@
       </dependency>
       <dependency>
         <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-spring-boot-metrics-starter</artifactId>
-        <version>${azure.springboot.metricsstarter.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>applicationinsights-spring-boot-starter</artifactId>
-        <version>${azure.applicationinsights.springboot.starter.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>applicationinsights-core</artifactId>
-        <version>${applicationinsights.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>applicationinsights-web</artifactId>
-        <version>${applicationinsights.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>applicationinsights-logging-logback</artifactId>
+        <artifactId>applicationinsights-runtime-attach</artifactId>
         <version>${applicationinsights.version}</version>
       </dependency>
       <dependency>
@@ -189,11 +166,6 @@
         <version>${guava.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.maven.surefire</groupId>
-        <artifactId>surefire-junit4</artifactId>
-        <version>${surefire.junit4.version}</version>
-      </dependency>
-      <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
         <artifactId>equalsverifier</artifactId>
         <version>${equalsverifier.version}</version>
@@ -202,6 +174,11 @@
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>${h2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate.orm</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${hibernate.version}</version>
       </dependency>
       <dependency>
         <groupId>com.doctusoft</groupId>
@@ -217,11 +194,6 @@
         <groupId>com.neovisionaries</groupId>
         <artifactId>nv-i18n</artifactId>
         <version>${neovisionaries.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.mashape.unirest</groupId>
-        <artifactId>unirest-java</artifactId>
-        <version>${com.mashape.unirest.version}</version>
       </dependency>
       <dependency>
         <groupId>org.owasp.encoder</groupId>
@@ -242,11 +214,6 @@
         <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt-jackson</artifactId>
         <version>${jjwt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>${testng.version}</version>
       </dependency>
       <dependency>
         <groupId>org.yaml</groupId>
@@ -290,20 +257,12 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.microsoft.azure</groupId>
-      <artifactId>azure-spring-boot-metrics-starter</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>com.microsoft.azure</groupId>
-      <artifactId>applicationinsights-spring-boot-starter</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.microsoft.azure</groupId>
-      <artifactId>applicationinsights-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.microsoft.azure</groupId>
-      <artifactId>applicationinsights-logging-logback</artifactId>
+      <artifactId>applicationinsights-runtime-attach</artifactId>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
@@ -318,8 +277,8 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -383,11 +342,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.surefire</groupId>
-      <artifactId>surefire-junit4</artifactId>
+      <version>5.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -401,14 +356,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <scope>test</scope>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-java8</artifactId>
-      <scope>test</scope>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
   </dependencies>
 
@@ -454,11 +407,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <argLine>
-              ${argLine} --illegal-access=permit
-            </argLine>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -468,9 +416,6 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
-          <configuration>
-            <fork>true</fork>
-          </configuration>
           <executions>
             <execution>
               <goals>
@@ -568,6 +513,7 @@
           </dependencies>
           <configuration>
             <configLocation>${project.build.directory}/maven-shared-archive-resources/google_checks_ipaffs.xml</configLocation>
+            <suppressionsLocation>${project.build.directory}/maven-shared-archive-resources/checkstyle-suppressions.xml</suppressionsLocation>
             <logViolationsToConsole>true</logViolationsToConsole>
             <outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
             <violationSeverity>warning</violationSeverity>
